force-app/main/default/objects/SlackChannel__c/SlackChannel__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Slack Channel</label>
</CustomObject>