force-app/main/default/objects/SlackChannel__c/fields/IdChannel__c.field-meta.xml
<CustomField>
    <fullName>IdChannel__c</fullName>
    <label>IdChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>