force-app/main/default/objects/SlackChannel__c/fields/NameChannel__c.field-meta.xml
<CustomField>
    <fullName>NameChannel__c</fullName>
    <label>NameChannel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>