force-app/main/default/objects/SlackChannel__c/fields/WorkspaceId__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceId__c</fullName>
    <label>WorkspaceId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>